--- a/src/output.css
+++ b/src/output.css
@@ -449,6 +449,9 @@
   .h-\[270px\] {
     height: 270px;
   }
+  .h-\[287px\] {
+    height: 287px;
+  }
   .h-\[297px\] {
     height: 297px;
   }
@@ -475,6 +478,9 @@
   }
   .h-\[560px\] {
     height: 560px;
+  }
+  .h-\[591px\] {
+    height: 591px;
   }
   .h-\[600px\] {
     height: 600px;
@@ -644,6 +650,12 @@
   .w-\[342px\] {
     width: 342px;
   }
+  .w-\[344px\] {
+    width: 344px;
+  }
+  .w-\[345px\] {
+    width: 345px;
+  }
   .w-\[346\] {
     width: 346;
   }
@@ -724,6 +736,12 @@
   }
   .gap-\[15px\] {
     gap: 15px;
+  }
+  .gap-\[25\] {
+    gap: 25;
+  }
+  .gap-\[25px\] {
+    gap: 25px;
   }
   .gap-\[30px\] {
     gap: 30px;
@@ -1424,6 +1442,11 @@
       height: 200px;
     }
   }
+  .md\:h-\[210\] {
+    @media (width >= 48rem) {
+      height: 210;
+    }
+  }
   .md\:h-\[232\] {
     @media (width >= 48rem) {
       height: 232;
@@ -1494,6 +1517,16 @@
       height: 463px;
     }
   }
+  .md\:h-\[475\] {
+    @media (width >= 48rem) {
+      height: 475;
+    }
+  }
+  .md\:h-\[475px\] {
+    @media (width >= 48rem) {
+      height: 475px;
+    }
+  }
   .md\:h-\[480px\] {
     @media (width >= 48rem) {
       height: 480px;
@@ -1549,9 +1582,19 @@
       height: 700px;
     }
   }
+  .md\:h-\[738px\] {
+    @media (width >= 48rem) {
+      height: 738px;
+    }
+  }
   .md\:h-\[770px\] {
     @media (width >= 48rem) {
       height: 770px;
+    }
+  }
+  .md\:h-\[838\] {
+    @media (width >= 48rem) {
+      height: 838;
     }
   }
   .md\:h-\[850px\] {
@@ -1569,6 +1612,16 @@
       height: 900px;
     }
   }
+  .md\:h-\[938\] {
+    @media (width >= 48rem) {
+      height: 938;
+    }
+  }
+  .md\:h-\[938px\] {
+    @media (width >= 48rem) {
+      height: 938px;
+    }
+  }
   .md\:h-\[950px\] {
     @media (width >= 48rem) {
       height: 950px;
@@ -1582,6 +1635,11 @@
   .md\:h-\[1020px\] {
     @media (width >= 48rem) {
       height: 1020px;
+    }
+  }
+  .md\:h-\[1038\] {
+    @media (width >= 48rem) {
+      height: 1038;
     }
   }
   .md\:h-\[1040px\] {
@@ -1627,6 +1685,11 @@
   .md\:h-\[1600px\] {
     @media (width >= 48rem) {
       height: 1600px;
+    }
+  }
+  .md\:h-\[1638\] {
+    @media (width >= 48rem) {
+      height: 1638;
     }
   }
   .md\:h-\[1700px\] {
@@ -1772,6 +1835,11 @@
   .md\:w-\[450px\] {
     @media (width >= 48rem) {
       width: 450px;
+    }
+  }
+  .md\:w-\[568px\] {
+    @media (width >= 48rem) {
+      width: 568px;
     }
   }
   .md\:w-\[580px\] {
@@ -1922,6 +1990,11 @@
   .md\:gap-\[0px\] {
     @media (width >= 48rem) {
       gap: 0px;
+    }
+  }
+  .md\:gap-\[25px\] {
+    @media (width >= 48rem) {
+      gap: 25px;
     }
   }
   .md\:p-\[0px\] {
@@ -2391,6 +2464,11 @@
       height: 280px;
     }
   }
+  .lg\:h-\[316px\] {
+    @media (width >= 64rem) {
+      height: 316px;
+    }
+  }
   .lg\:h-\[360px\] {
     @media (width >= 64rem) {
       height: 360px;
@@ -2476,9 +2554,19 @@
       height: 568px;
     }
   }
+  .lg\:h-\[575px\] {
+    @media (width >= 64rem) {
+      height: 575px;
+    }
+  }
   .lg\:h-\[590px\] {
     @media (width >= 64rem) {
       height: 590px;
+    }
+  }
+  .lg\:h-\[600px\] {
+    @media (width >= 64rem) {
+      height: 600px;
     }
   }
   .lg\:h-\[633px\] {
@@ -2494,6 +2582,11 @@
   .lg\:h-\[670px\] {
     @media (width >= 64rem) {
       height: 670px;
+    }
+  }
+  .lg\:h-\[675px\] {
+    @media (width >= 64rem) {
+      height: 675px;
     }
   }
   .lg\:h-\[690px\] {
@@ -2531,14 +2624,39 @@
       height: 760px;
     }
   }
+  .lg\:h-\[775\] {
+    @media (width >= 64rem) {
+      height: 775;
+    }
+  }
+  .lg\:h-\[775px\] {
+    @media (width >= 64rem) {
+      height: 775px;
+    }
+  }
   .lg\:h-\[800px\] {
     @media (width >= 64rem) {
       height: 800px;
     }
   }
+  .lg\:h-\[875px\] {
+    @media (width >= 64rem) {
+      height: 875px;
+    }
+  }
+  .lg\:h-\[900px\] {
+    @media (width >= 64rem) {
+      height: 900px;
+    }
+  }
   .lg\:h-\[933px\] {
     @media (width >= 64rem) {
       height: 933px;
+    }
+  }
+  .lg\:h-\[950px\] {
+    @media (width >= 64rem) {
+      height: 950px;
     }
   }
   .lg\:h-\[957px\] {
@@ -2556,9 +2674,19 @@
       height: 1000px;
     }
   }
+  .lg\:h-\[1050px\] {
+    @media (width >= 64rem) {
+      height: 1050px;
+    }
+  }
   .lg\:h-\[1070px\] {
     @media (width >= 64rem) {
       height: 1070px;
+    }
+  }
+  .lg\:h-\[1075px\] {
+    @media (width >= 64rem) {
+      height: 1075px;
     }
   }
   .lg\:h-\[1133\] {
@@ -2614,6 +2742,11 @@
   .lg\:h-\[1740px\] {
     @media (width >= 64rem) {
       height: 1740px;
+    }
+  }
+  .lg\:h-\[1750px\] {
+    @media (width >= 64rem) {
+      height: 1750px;
     }
   }
   .lg\:h-\[1770px\] {
@@ -2741,6 +2874,11 @@
       width: 580px;
     }
   }
+  .lg\:w-\[586px\] {
+    @media (width >= 64rem) {
+      width: 586px;
+    }
+  }
   .lg\:w-\[587p\] {
     @media (width >= 64rem) {
       width: 587p;
@@ -2764,6 +2902,11 @@
   .lg\:w-\[600px\] {
     @media (width >= 64rem) {
       width: 600px;
+    }
+  }
+  .lg\:w-\[686px\] {
+    @media (width >= 64rem) {
+      width: 686px;
     }
   }
   .lg\:w-\[690px\] {
@@ -2826,6 +2969,11 @@
       width: 1414px;
     }
   }
+  .lg\:w-\[1520\] {
+    @media (width >= 64rem) {
+      width: 1520;
+    }
+  }
   .lg\:w-\[1520px\] {
     @media (width >= 64rem) {
       width: 1520px;
@@ -2854,6 +3002,11 @@
   .lg\:w-\[1536px\] {
     @media (width >= 64rem) {
       width: 1536px;
+    }
+  }
+  .lg\:w-\[1920\] {
+    @media (width >= 64rem) {
+      width: 1920;
     }
   }
   .lg\:w-\[px\] {
@@ -2911,6 +3064,13 @@
       justify-content: center;
     }
   }
+  .lg\:lg\:justify-center {
+    @media (width >= 64rem) {
+      @media (width >= 64rem) {
+        justify-content: center;
+      }
+    }
+  }
   .lg\:gap-0 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 0);
@@ -2941,9 +3101,29 @@
       gap: calc(var(--spacing) * 140);
     }
   }
+  .lg\:gap-\[3px\] {
+    @media (width >= 64rem) {
+      gap: 3px;
+    }
+  }
+  .lg\:gap-\[25px\] {
+    @media (width >= 64rem) {
+      gap: 25px;
+    }
+  }
   .lg\:gap-\[30px\] {
     @media (width >= 64rem) {
       gap: 30px;
+    }
+  }
+  .lg\:gap-\[51px\] {
+    @media (width >= 64rem) {
+      gap: 51px;
+    }
+  }
+  .lg\:gap-\[px\] {
+    @media (width >= 64rem) {
+      gap: px;
     }
   }
   .lg\:px-5 {
@@ -3014,6 +3194,31 @@
   .lg\:text-\[40px\] {
     @media (width >= 64rem) {
       font-size: 40px;
+    }
+  }
+  .lg\:text-\[50px\] {
+    @media (width >= 64rem) {
+      font-size: 50px;
+    }
+  }
+  .lg\:text-\[55px\] {
+    @media (width >= 64rem) {
+      font-size: 55px;
+    }
+  }
+  .lg\:text-\[57px\] {
+    @media (width >= 64rem) {
+      font-size: 57px;
+    }
+  }
+  .lg\:text-\[58px\] {
+    @media (width >= 64rem) {
+      font-size: 58px;
+    }
+  }
+  .lg\:text-\[59px\] {
+    @media (width >= 64rem) {
+      font-size: 59px;
     }
   }
   .lg\:text-\[60px\] {
